--- a/online-shopping-application/pom.xml
+++ b/online-shopping-application/pom.xml
@@ -63,6 +63,13 @@
 	    <version>2.9.7</version>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-orm</artifactId>
+	    <version>5.1.3.RELEASE</version>
+	</dependency>
+
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
