--- a/online-shopping-application/pom.xml
+++ b/online-shopping-application/pom.xml
@@ -76,6 +76,14 @@
 	    <artifactId>commons-dbcp</artifactId>
 	    <version>1.4</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
+	<dependency>
+	    <groupId>javax.transaction</groupId>
+	    <artifactId>javax.transaction-api</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
 
   </dependencies>
   <build>
